compiler/testData/diagnostics/tests/thisAndSuper/superInExtensionFunction.fir.kt
fun String.f() {
    <!SUPER_NOT_AVAILABLE!>super@f<!>.<!UNRESOLVED_REFERENCE!>compareTo<!>("")
    <!SUPER_NOT_AVAILABLE!>super<!>.<!UNRESOLVED_REFERENCE!>compareTo<!>("")
}